fix background of the <select> form widget's popup list.

When the form widget has an associated bg image, it is assigned a
partially transparent palette to let the image show through.

That palette used to percolate to the popup list, with interesting visual
results.

BUG: 170398

svn path=/trunk/KDE/kdelibs/; revision=857217